--- a/Código/omnetpp.ini
+++ b/Código/omnetpp.ini
@@ -4,9 +4,9 @@ sim-time-limit = 200s
 
 Network.nodeTx.gen.generationInterval=exponential(0.01)
 Network.nodeTx.gen.packetByteSize=12500
-Network.queue.bufferSize=200
-Network.nodeRx.queue.bufferSize=200
-Network.nodeTx.queue.bufferSize=20000000
-Network.queue.serviceTime=exponential(0.001)
-Network.nodeRx.queue.serviceTime=exponential(0.001)
-Network.nodeTx.queue.serviceTime=exponential(0.001)
+Network.queue0.bufferSize=200
+Network.queue1.bufferSize=200
+Network.nodeRx.traRx.bufferSize=200
+Network.nodeTx.traTx.bufferSize=20000000
+Network.queue0.serviceTime=exponential(0.001)
+Network.queue1.serviceTime=exponential(0.001)
